--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <project.build.encoding>UTF-8</project.build.encoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
     <groupId>info.gabi</groupId>
     <artifactId>seleniumTinkoff</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -16,6 +21,31 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <!--стратегия параллелизации-->
+                    <parallel>methods</parallel>
+                    <!--<parallel>classes</parallel>-->
+                    <!--<parallel>all</parallel>-->
+
+                    <!--макисмальное число процессов-->
+                    <forkCount>1</forkCount>
+
+                    <!--признак возможности переиспользования потока-->
+                    <reuseForks>true</reuseForks>
+
+                    <!--соотношение потоков на cpu (Default true)-->
+                    <perCoreThreadCount>false</perCoreThreadCount>
+                    <!--макисмальное число потоков-->
+                    <threadCount>3</threadCount>
+
+                    <!--if parallel All = threadCount, classes = threadCountClasses, methods = threadCountMethods-->
+                    <!--<useUnlimitedThreads>true</useUnlimitedThreads>-->
                 </configuration>
             </plugin>
         </plugins>
@@ -33,17 +63,21 @@
             <version>1.18.6</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>3.14.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>23.1-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
@@ -51,9 +85,5 @@
             <version>3.12.2</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
-
-
 </project>
